# wg-mtu-auto

./: .gitignore  CHANGELOG.md  Guide.md  MIRRORS  Makefile  README.md  main.py  pyproject.toml  test.py
.github/workflows/: ci.yml
src/automtu/: __main__.py  cli.py  core.py  docker.py  net.py  output.py  persist.py  pmtu.py  wg.py
tests/unit/: test___init__.py  test___main__.py  test_cli.py  test_core.py  test_docker.py  test_net.py  test_output.py  test_persist.py  test_pmtu.py  test_wg.py
